Name:                cryptd-lib
Version:             0.1.4
Synopsis:            MoonID encryption daemon (library)
Homepage:            https://github.com/RedMoonStudios/cryptd
License:             GPL
License-file:        LICENSE
Author:              RedMoon Studios GmbH & Co KG
Maintainer:          ssladmin@redmoonstudios.de
Description:
    This is the RedMoon Studios encryption daemon, which acts as some kind of
    tunnel, serializing HTTP API Requests from/to slaves.

    The daemon consists of a master and a slave, where the master is some kind
    of a metaserver and connection pooler and also monitores slave connections.

    Slaves are built using binaries with placeholders and are added to the
    master's storage to be built/patched with the placeholder (partner specific
    stuff and certificates).

    That way, encryption integration and handling certificates becomes quite
    easy on both sides.

Copyright:           (C) 2011 RedMoon Studios GmbH & Co KG
Category:            Network

Build-type:          Simple
Cabal-version:       >= 1.8

Source-repository head
    Type:            git
    Location:        git@github.com:RedMoonStudios/cryptd.git

Library
    Ghc-options:     -Wall
    Exposed-modules:
        Cryptd.Lib.HTTP
        Cryptd.Lib.HTTPSerial
        Cryptd.Lib.TLS
        Cryptd.Lib.Tunnel
        Cryptd.Lib.Callbacks
        Cryptd.Lib.Daemonize
        Cryptd.Lib.ConfigEmbed
        Cryptd.Lib.Wai
        Cryptd.Lib.Util
    Build-depends:
        base < 5,
        stm,
        mtl,
        text,
        case-insensitive,
        filepath,
        directory,
        network,
        tls == 0.9.*,
        tls-extra == 0.4.*,
        crypto-pubkey-types,
        certificate,
        cprng-aes,
        derive,
        cereal,
        bytestring,
        file-embed,
        blaze-builder,
        http-types,
        http-conduit == 1.4.*,
        vault,
        conduit == 0.4.*,
        wai == 1.2.*
    if !os(windows)
        Build-depends: unix == 2.*
